<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button_label1">Spotify Streamer</string>
    <string name="button_label2">Scores App </string>
    <string name="button_label3">Library App </string>
    <string name="button_label4">Build It Bigger </string>
    <string name="button_label5">XYZ Reader </string>
    <string name="button_label6">Capstone : My App </string>
</resources>

