<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#271e57">

    <TextView android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginBottom="15dp"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:textColor="#ceffe1"
        android:gravity="center" />

    <Button
        style="@style/MyButton.orange"
        android:text="@string/button_label1"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        style="@style/MyButton.orange"
        android:text="@string/button_label2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button"
         />
    <Button
        style="@style/MyButton.orange"
        android:text="@string/button_label3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button2"
        />
    <Button
        style="@style/MyButton.orange"
        android:text="@string/button_label4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button3"
        />
    <Button
        style="@style/MyButton.orange"
        android:text="@string/button_label5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button4"
        />
    <Button
        style="@style/MyButton.red"
        android:text="@string/button_label6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button5"
         />



</RelativeLayout>
